# instagram-ai-platform

./: .gitignore  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: auth.py  (+8 more)
backend/app/core/: celery_app.py  config.py  database.py  exceptions.py  logging.py  rate_limiter.py  redis.py  security.py
backend/app/models/: __init__.py  ai_run.py  audit_log.py  base.py  conversation.py  instagram_account.py  knowledge_chunk.py  knowledge_document.py  membership.py  message.py  user.py  webhook_event.py  workspace.py
backend/app/repositories/: ai_repo.py  conversation_repo.py  health_repository.py  instagram_repo.py  knowledge_repo.py  message_repo.py  user_repo.py  webhook_event_repo.py  workspace_repo.py
backend/app/schemas/: auth.py  common.py  conversations.py  health.py  instagram.py  knowledge.py  messages.py  workspaces.py
backend/app/services/: ai_service.py  audit_service.py  auth_service.py  conversation_service.py  health_service.py  instagram_service.py  knowledge_service.py  message_service.py  webhook_service.py  workspace_service.py
backend/app/tasks/: ai_tasks.py  celery_app.py  delivery_tasks.py  webhook_tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 92e86107709e_init.py  a1b2c3d4e5f6_milestone5_ai_pipeline.py  b2c3d4e5f6a7_milestone6_knowledge_base.py  (+2 more)
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_conversations.py  test_knowledge.py  test_webhooks.py  test_workspaces.py
(+319 files in other folders)
