[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-ai-platform-backend"
version = "0.1.0"
description = "Multi-tenant Instagram DM AI reply backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "psycopg[binary]>=3.1,<4.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "celery[redis]>=5.4,<6.0",
    "python-json-logger>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
